# lclq

./: .dockerignore  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  clippy.toml  deny.toml  docker-compose.yml  lclq.toml.example  test_push_subscriptions.sh
.github/: CODEOWNERS  DOCKER_RELEASE_SETUP.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  security.yml  test.yml
benches/: message_benchmarks.rs  storage_benchmarks.rs
docs/: TODO.md  benchmarks.md  prd.md  push-subscriptions.md  quickstart.md  tech-prd.md
docs/plans/: 2025-12-02-pubsub-push-subscriptions-design.md  2025-12-02-pubsub-push-subscriptions.md
examples/: README.md
examples/pubsub/python/: README.md  publisher.py  subscriber.py
examples/sqs/python/: README.md  consumer.py  producer.py
migrations/: 20250101000000_initial_schema.sql
migrations/sqlite/: 20250101000000_initial_schema.sql  20250102000000_add_redrive_allow_policy.sql
proto/google/pubsub/v1/: pubsub.proto
scripts/: install-hooks.sh  pre-commit
src/: lib.rs  main.rs
src/cli/: mod.rs  output.rs
src/cli/commands/: mod.rs  start.rs
src/config/: mod.rs
src/core/: cleanup.rs  dlq.rs  mod.rs  receipt.rs  visibility.rs
src/error/: mod.rs
src/metrics/: mod.rs
src/pubsub/: grpc_server.rs  mod.rs  publisher.rs  push_queue.rs  push_worker.rs  rest.rs  subscriber.rs  types.rs
src/server/: admin.rs  metrics.rs  mod.rs  shutdown.rs
src/sqs/: handler.rs  mod.rs  request.rs  response.rs  server.rs  types.rs
src/storage/: memory.rs  mod.rs
src/storage/sqlite/: mod.rs  schema.sql
src/types/: mod.rs  validation.rs
tests/: memory_backend_test.rs  push_subscriptions_test.rs  sqlite_backend_test.rs  sqs_handler_test.rs  test_sqlite_subscriptions.rs
tests/integration/: push_subscriptions_test.rs
tests/integration/go/: go.mod  go.sum  pubsub_test.go  sqs_test.go  test_publish_ordering.go
tests/integration/javascript/: package.json  test-sqs-advanced.js
tests/integration/js_pubsub/: README.md  jest.config.js  package.json  pubsub.test.js
tests/integration/python/: README.md  debug_boto3.py  pyproject.toml  test_change_message_visibility.py  test_change_message_visibility_batch.py  test_delete_message_batch.py  test_get_queue_attributes.py  test_get_queue_attributes_debug.py  test_send_message_batch.py  test_set_queue_attributes.py  test_specific_attrs.py  test_sqs.py  test_sqs_advanced.py
tests/integration/python_pubsub/: README.md  pyproject.toml  test_pubsub.py
tests/integration/python_pubsub_rest/: pyproject.toml  test_pubsub_rest.py
tests/integration/rust/: Cargo.toml
tests/integration/rust/tests/: sqs_tests.rs
