[package]
name = "lclq"
version = "0.1.0"
edition = "2024"
authors = ["lclq Contributors"]
description = "A lightweight local queue service compatible with AWS SQS and GCP Pub/Sub"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/lclq"
keywords = ["queue", "sqs", "pubsub", "local", "development"]
categories = ["development-tools", "network-programming"]

[lib]
name = "lclq"
path = "src/lib.rs"

[[bin]]
name = "lclq"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Base64 encoding
base64 = "0.22"

# Cryptography
sha2 = "0.10"

[dev-dependencies]
