[project]
name = "lclq-tests"
version = "0.1.0"
description = ""
authors = [
    {name = "Eran Sandler",email = "eran@sandler.co.il"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.40.57,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
