[tool.poetry]
name = "lclq-tests"
version = "0.1.0"
description = "Integration tests for lclq"
authors = ["Eran Sandler <eran@sandler.co.il>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
boto3 = ">=1.40.57,<2.0.0"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
