[tool.poetry]
name = "lclq-pubsub-rest-tests"
version = "0.1.0"
description = "Integration tests for lclq Pub/Sub REST API"
authors = ["lclq"]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-pubsub = "^2.23.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
